kubernetes/api/articles/traefik_articles_api_server.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: articles-api-http-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.tagenal`) && PathPrefix(`/articles`)
      services:
        - name: articles-api
          port: 8080
      middlewares:
        - name: articles-api-http-route-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: articles-api-http-route-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /articles
      - /articles/
